// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component with children props 1`] = `
<div
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "lightgrey",
        "borderRadius": 1000,
        "display": "flex",
        "fontSize": 100,
        "height": 200,
        "justifyContent": "center",
        "width": 200,
      },
      Object {},
    ]
  }
>
  hello
</div>
`;

exports[`Avatar component with size props 1`] = `
<img
  source={undefined}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "lightgrey",
        "borderRadius": 1000,
        "display": "flex",
        "fontSize": 50,
        "height": 100,
        "justifyContent": "center",
        "width": 100,
      },
      Object {},
    ]
  }
/>
`;

exports[`Avatar component with src and size props 1`] = `
<img
  source="https://material-ui-next.com/static/images/remy.jpg"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "lightgrey",
        "borderRadius": 1000,
        "display": "flex",
        "fontSize": 100,
        "height": 200,
        "justifyContent": "center",
        "width": 200,
      },
      Object {},
    ]
  }
/>
`;

exports[`Avatar component with src props 1`] = `
<img
  source="https://material-ui-next.com/static/images/remy.jpg"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "lightgrey",
        "borderRadius": 1000,
        "display": "flex",
        "fontSize": 35,
        "height": 70,
        "justifyContent": "center",
        "width": 70,
      },
      Object {},
    ]
  }
/>
`;

exports[`Avatar component with style 1`] = `
<img
  source={undefined}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "lightgrey",
        "borderRadius": 1000,
        "display": "flex",
        "fontSize": 35,
        "height": 70,
        "justifyContent": "center",
        "width": 70,
      },
      Object {
        "backgroundColor": "green",
      },
    ]
  }
/>
`;
